Fixes to agent mode redo.  Change SASS maven plugin.  Update to Java 9.